--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "check-format": "npm run prettier -- --list-different",
     "start": "http-server ./ -p 8081",
     "build": "npm run clean && webpack",
-    "clean": "rm -rf ./dist && rm -rf ./iframe-entry/dist"
+    "clean": "rm -rf ./dist && rm -rf ./iframe-entry/dist",
+    "test": "jest",
+    "test:c": "jest --coverage",
+    "test:d": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
+    "test:w": "jest --watch"
   },
   "husky": {
     "hooks": {
@@ -66,6 +70,7 @@
     "typed-ts-events": "^1.0.5"
   },
   "devDependencies": {
+    "@types/jest": "^25.1.1",
     "@types/styled-system__css": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
@@ -73,16 +78,18 @@
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jest": "^23.1.1",
+    "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.12.0",
     "husky": "^3.1.0",
+    "jest": "^25.1.0",
     "less-loader": "^5.0.0",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
+    "ts-jest": "^25.1.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.7.2",
     "uri-js": "^4.2.2",
